objects/Dental_Complete__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Account_Legal_Name__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Anthem_Entity__c</formula>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_or_Declined_Time__c</fullName>
        <description>Intermediate Field For Approval Or Declined Date</description>
        <formula>CASE(MOD( Dental_Complete_Check_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Approved_or_Declined_Date__c - Dental_Complete_Check_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Approved_or_Declined_Date__c - Dental_Complete_Check_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Approved_or_Declined_Date__c - Dental_Complete_Check_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Approved_or_Declined_Date__c - Dental_Complete_Check_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Approved_or_Declined_Date__c - Dental_Complete_Check_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Approved_or_Declined_Date__c - Dental_Complete_Check_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Approved_or_Declined_Date__c - Dental_Complete_Check_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Approved_or_Declined_Date__c - Dental_Complete_Check_Date__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval or Declined Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_or_Declined_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved or Declined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COMPLETE_PAPERWORK_RECEIVED_IN_IMPL__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.COMPLETE_PAPERWORK_RECEIVED_IN_IMPL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COMPLETE PAPERWORK RECEIVED IN IMPL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cert_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cert Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cert_Team_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cert Team Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_SME_time__c</fullName>
        <description>Pratibha created this for PRDCRM- 30663</description>
        <formula>IF( 
ISBLANK(Approved_Date_Completed__c),((Now() - In_Progress_Date_Completed__c) - Pending_Correction_Time__c) , 
((Approved_Date_Completed__c - In_Progress_Date_Completed__c) - Pending_Correction_Time__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Master_Account__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Automation_Eligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Master Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBA_Team_Assigned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DBA Team Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBA_Team_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DBA Team Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DBA Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dentals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DBA_Team_Missing_Documentation__c</fullName>
        <label>DBA Team Missing Documentation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Structure</fullName>
                </value>
                <value>
                    <fullName>Benefit Summary</fullName>
                </value>
                <value>
                    <fullName>Benefits Information</fullName>
                </value>
                <value>
                    <fullName>Billing Information</fullName>
                </value>
                <value>
                    <fullName>Booklet Information</fullName>
                </value>
                <value>
                    <fullName>Claims Run-out Date</fullName>
                </value>
                <value>
                    <fullName>Confirming Duplicate Request</fullName>
                </value>
                <value>
                    <fullName>Confirming Rate/Fees</fullName>
                </value>
                <value>
                    <fullName>Deviation Grid</fullName>
                </value>
                <value>
                    <fullName>Employer Application</fullName>
                </value>
                <value>
                    <fullName>Online Billing/Enrollment Form</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Proposal / Proposal Not Legible</fullName>
                </value>
                <value>
                    <fullName>UW Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DDS_Enrollment_Load_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DDS Enrollment Load Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DDS_Group_Load_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIM2 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Complete_Check_Date__c</fullName>
        <description>Captures Date When The Dental_Complete Check Field Is True</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures Date When The Dental_Complete Check Field Is True</inlineHelpText>
        <label>Dental_Complete Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Group_Setup_Complete_Date_time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Group Setup Complete Date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dental_Product_Sold__c</fullName>
        <formula>IF(
		(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Quote.Number_of_Dental_Product_Sold__c&gt;=1)
	 ,True,False)</formula>
        <label>Dental Product Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_Source_System_Values__c</fullName>
        <label>Dental Source System Values</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DDS</fullName>
                </value>
                <value>
                    <fullName>WGS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Impressions_Needed__c</fullName>
        <description>[Pratibha]- created this for PRDCRM- 30407  changes</description>
        <formula>Text(Implementation_Tracking_ID__r.Implementation_Record_ID__r.First_Impressions_Needed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Impressions Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIM_Customer_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIM Customer Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSM_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GSM Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GSM_Created__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GSM Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GSM_Submitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GSM Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Group_Number__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Group_Number__r.Id, Implementation_Tracking_ID__r.Group_Number__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>Implementation_Tracking_ID__r.Group_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Products__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impacted Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Name1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Start_Date__c</fullName>
        <description>This field refers to the Implementation Case Start Date field of the related Implementation Case.</description>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.EffectiveDate</formula>
        <label>Implementation Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Status__c</fullName>
        <formula>Text(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Implementation_Status__c)</formula>
        <label>Implementation Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID__c</fullName>
        <formula>HYPERLINK(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Id,Implementation_Tracking_ID__r.Implementation_Record_ID__r.OrderNumber)</formula>
        <label>Implementation Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipName>Dental_Completes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In_Progress_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Intake_Type_Migration__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Intake_Type_Migration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intake Type Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOwnerQueue__c</fullName>
        <formula>Owner:Queue.OwnerId</formula>
        <label>IsOwnerQueue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Dental_DDS_Detail_Applicable__c</fullName>
        <label>Is Dental DDS Detail Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Owner_the_Logged_in_user__c</fullName>
        <formula>IF(Owner:User.Id == $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner the Logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pending_Correction_Record_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is True If Pending Correction Record Present, Else False.</description>
        <label>Is Pending Correction Record Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JAA_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.JAA_Group__c</formula>
        <label>JAA Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Date_Assigned__c</fullName>
        <description>[Pratibha]- 02/19- created this field as part of  PRDCRM-30096</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoggedinProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedinProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCS_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.MCS_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCS Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_DBA_Team__c</fullName>
        <formula>IF(DBA_Team_Member__c = $User.Id,True,False)</formula>
        <label>My DBA Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Opportunity.RecordTypeName__c</formula>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Date_Captured__c</fullName>
        <formula>IF(Original_Dental_Complete_Date__c &lt;&gt; NULL , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Date Captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Dental_Complete_Date__c</fullName>
        <description>Original Dental_Complete Date Used In The Workflow Rule When A New Record Is Created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental_Complete Original Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Overall_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingCorrectionAction__c</fullName>
        <formula>IF(AND(OR(LoggedinProfile__c ==&apos;SME&apos;,LoggedinProfile__c ==&apos;SME Dual&apos;,LoggedinProfile__c ==&apos;Specialty Post Sales&apos;, LoggedinProfile__c ==&apos;Specialty Post Sales Dual&apos;), Tech_Support_Dental__c  == False),&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PendingCorrectionAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Pending Correction from WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Corrections Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Time__c</fullName>
        <description>Pratibha created this for PRDCRM- 30663</description>
        <label>Pending Correction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Approved_Declined__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined from Pending Correction As Prior Value. Retrieving From WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Approved/Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_SME_Review_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending SME Review Initiated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Families__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Families</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Line Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <formula>HYPERLINK( Implementation_Tracking_ID__r.Implementation_Record_ID__r.QuoteId , Implementation_Tracking_ID__r.Implementation_Record_ID__r.Quote.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Cert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking_ID__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reissue_Certificates__c</fullName>
        <label>Reissue Certificates?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <description>This value is being stamped from the Account&apos;s Situs State Field.</description>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Situs_State__c</formula>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Implementation_Type__c</fullName>
        <description>This has been removed from the layout, can be used in future.
This field is being stamped from Specialty_Implementation_Type__c field of Case Installation&apos;s object.</description>
        <formula>Text(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Specialty_Implementation_Type__c)</formula>
        <label>Specialty Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 Not Started</fullName>
                    <default>true</default>
                    <label>01 Not Started</label>
                </value>
                <value>
                    <fullName>02 Work In Progress</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction Returned</fullName>
                </value>
                <value>
                    <fullName>04 Approved</fullName>
                </value>
                <value>
                    <fullName>05 Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Stage__c</fullName>
        <label>Sub-Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Enrollment</fullName>
                </value>
                <value>
                    <fullName>Pending Migration</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Dental Work Complete</fullName>
                </value>
                <value>
                    <fullName>Rate Guarantee - no action needed</fullName>
                    <label>Rate Guarantee - No Action Needed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_to_DBA_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted to DBA Team</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tech_Support_Dental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Support Dental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_To_Approve_Deny__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- Dental_Complete Pending Correction Time</description>
        <label>Time To Approve/Deny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_To_Pend__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- Dental_Complete Pending Correction Time</description>
        <label>Time To Pend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_SME_Dept__c</fullName>
        <description>Sum of &quot;Time To Pend&quot; and &quot;Time To Approve&quot;</description>
        <formula>IF( Pending_Correction_Date__c &lt;&gt; Approved_or_Declined_Date__c, (Time_To_Approve_Deny__c + Time_To_Pend__c ), Time_To_Pend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of &quot;Time To Pend&quot; and &quot;Time To Approve&quot;</inlineHelpText>
        <label>Time in SME Dept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <description>Difference Between The Dates Of Previous Department&apos;s &quot;Approved?&quot; Checkbox Was checked And Date When The Current SME Record&apos;s Stage Is Changed To &quot;03 Pending Correction&quot; To &quot;04 Approved&quot; Or &quot;05 Declined&quot;.</description>
        <formula>IF( 
ISNULL(Pending_Correction_to_Approved_Declined__c), 0 ,

CASE(MOD( Original_Dental_Complete_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Dental_Complete_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Dental_Complete_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Dental_Complete_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Dental_Complete_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Dental_Complete_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Dental_Complete_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Dental_Complete_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((Pending_Correction_to_Approved_Declined__c -  Original_Dental_Complete_Date__c)/7)*5)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference Between The Dates Of Previous Department&apos;s &quot;Approved?&quot; Checkbox Was checked And Date When The Current SME Record&apos;s Stage Is Changed To &quot;03 Pending Correction&quot; To &quot;04 Approved&quot; Or &quot;05 Declined&quot;.</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underwriting_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Complete Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Upsell__c</fullName>
        <label>Upsell</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dental</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assigned_DBA</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Implementation_Record_ID__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Group_Size__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Upsell__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Owner__c</columns>
        <columns>Submitted_to_DBA_Team__c</columns>
        <columns>DBA_Team_Member__c</columns>
        <columns>GSM_Created__c</columns>
        <columns>GSM_Submitted__c</columns>
        <columns>GSM_Approved__c</columns>
        <columns>DDS_Group_Load_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DBA_Team_Member__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Assigned DBA</label>
    </listViews>
    <listViews>
        <fullName>Assigned_DCR</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sub_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsOwnerQueue__c</field>
            <operation>equals</operation>
        </filters>
        <label>Assigned DCR</label>
    </listViews>
    <listViews>
        <fullName>Dentals_by_Claim_System</fullName>
        <columns>NAME</columns>
        <columns>Claim_System__c</columns>
        <columns>Dental_Product_Sold__c</columns>
        <columns>Is_Dental_DDS_Detail_Applicable__c</columns>
        <columns>Stage__c</columns>
        <columns>Contract_Code__c</columns>
        <columns>Product_Line_Code__c</columns>
        <columns>Underwriting_Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Dentals by Claim System</label>
    </listViews>
    <listViews>
        <fullName>Dentals_by_Group_Number</fullName>
        <columns>NAME</columns>
        <columns>Group_Number__c</columns>
        <columns>Dental_Product_Sold__c</columns>
        <columns>Is_Dental_DDS_Detail_Applicable__c</columns>
        <columns>Stage__c</columns>
        <columns>Contract_Code__c</columns>
        <columns>Product_Line_Code__c</columns>
        <columns>Underwriting_Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Dentals by Group Number</label>
    </listViews>
    <listViews>
        <fullName>Dentals_by_Implementation_Case_Status</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Case_Status__c</columns>
        <columns>Dental_Product_Sold__c</columns>
        <columns>Is_Dental_DDS_Detail_Applicable__c</columns>
        <columns>Stage__c</columns>
        <columns>Contract_Code__c</columns>
        <columns>Product_Line_Code__c</columns>
        <columns>Underwriting_Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Dentals by Implementation Case Status</label>
    </listViews>
</CustomObject>